@@ -11,6 +11,9 @@ import vswe.stevescarts.entity.ModularMinecartEntity;
 import vswe.stevescarts.modules.Configurable;
 import vswe.stevescarts.screen.widget.WFixedPanel;
 
+import java.util.List;
+import java.util.stream.Collectors;
+
 public class ModularCartHandler extends SyncedGuiDescription {
 	public ModularCartHandler(int syncId, PlayerInventory playerInventory, ModularMinecartEntity minecartEntity) {
 		super(StevesCartsScreenHandlers.MODULAR_CART, syncId, playerInventory);
@@ -18,8 +21,9 @@ public class ModularCartHandler extends SyncedGuiDescription {
 		panel.setInsets(new Insets(3, 0, 7, 0));
 		panel.setSize(256, 270);
 		this.setRootPanel(panel);
-		WListPanel<Configurable, WPlainPanel> panelList = new WListPanel<>(minecartEntity.getModuleList().stream().filter(Configurable.class::isInstance).map(Configurable.class::cast).toList(), WPlainPanel::new, Configurable::configure);
-		panelList.setSize(200, 256);
+		List<Configurable> panels = minecartEntity.getModuleList().stream().filter(Configurable.class::isInstance).map(Configurable.class::cast).collect(Collectors.toList());
+		WListPanel<Configurable, WPlainPanel> panelList = new WListPanel<>(panels, WPlainPanel::new, Configurable::configure);
+		panelList.setSize(230, 256);
 		addCentered(panelList, 16);
 		addCentered(createPlayerInventoryPanel(true), 180);
 		panel.validate(this);
